syntax = "proto3";

option go_package = "example.com/example/proto";

message SumArrRequest{
    repeated int32 arrs = 1;
}

message SumResponse{
    int32 sum = 1;
}

message SumRequest{
    int32 n1 =1;
    int32 n2 =2;
}

message PrimesRequest{
    int32 n =1;
}

message PrimesResponse{
    int32 n =1;
}

message AvgResponse{
    float n =1;
}


service CaculateSum {
    rpc SumTowInteger(SumRequest) returns (SumResponse);
    rpc SumArr(SumArrRequest) returns (SumResponse);
    rpc Primes (PrimesRequest) returns (stream PrimesResponse);
    rpc Avg (stream PrimesRequest) returns (AvgResponse);
    rpc Max (stream PrimesRequest) returns (stream PrimesResponse);
}